salesforce/force-app/main/default/objects/Product_Usage__c/Product_Usage__c.object-meta.xml
<CustomObject>
    <description>Daily product usage telemetry used by the renewal risk data product.</description>
    <label>Product Usage</label>
    <nameField>
        <label>Product Usage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Usage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>