salesforce/force-app/main/default/objects/Product_Usage__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>External account number used to join product telemetry to Salesforce Account.</description>
    <externalId>true</externalId>
    <label>Account Number</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>