salesforce/force-app/main/default/objects/Product_Usage__c/fields/Active_Users__c.field-meta.xml
<CustomField>
    <fullName>Active_Users__c</fullName>
    <description>Number of active users observed for the account on the usage date.</description>
    <label>Active Users</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>