salesforce/force-app/main/default/objects/Product_Usage__c/fields/Failed_Api_Calls__c.field-meta.xml
<CustomField>
    <fullName>Failed_Api_Calls__c</fullName>
    <description>Failed API calls observed for the account on the usage date.</description>
    <label>Failed API Calls</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>