salesforce/force-app/main/default/objects/Product_Usage__c/fields/Key_Feature_Events__c.field-meta.xml
<CustomField>
    <fullName>Key_Feature_Events__c</fullName>
    <description>Count of important feature events observed for the account on the usage date.</description>
    <label>Key Feature Events</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>