salesforce/force-app/main/default/objects/Product_Usage__c/fields/Usage_Date__c.field-meta.xml
<CustomField>
    <fullName>Usage_Date__c</fullName>
    <description>Date for the daily product usage measurement.</description>
    <label>Usage Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>